data-system/services/supabase/supabase-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-storage
  labels:
    app: supabase
    component: storage
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  template:
    metadata:
      name: supabase-storage
      labels:
        app: supabase
        component: storage
    spec:
      containers:
      - name: supabase-storage
        image: supabase/storage-api:v0.28.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          name: api
      restartPolicy: Always
  selector:
    matchLabels:
      app: supabase
      component: storage
---
apiVersion: v1
kind: Service
metadata:
  name: supabase-storage
  labels:
    app: supabase
    component: storage
spec:
  selector:
    app: supabase
    component: storage
  ports:
  - port: 5000
    targetPort: api
    name: api
